# control-center

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  control-center.spec
data/: com.chrisdaggas.control-center-snapshot.service  com.chrisdaggas.control-center-snapshot.timer  com.chrisdaggas.control-center.desktop  com.chrisdaggas.control-center.metainfo.xml
packaging/: build-packages.sh
packaging/appimage/: AppImageBuilder.yml  control-center.desktop
packaging/deb/debian/: changelog  control  copyright  rules
packaging/rpm/: control-center.spec
po/: LINGUAS  control-center.pot  de.po  el.po  es.po  fr.po  it.po  pt.po  ru.po  zh_CN.po
scripts/: clean.sh  doctor.sh  lint.sh  package-appimage.sh  package-deb.sh  package-rpm.sh  release-build.sh
src/: config.rs  i18n.rs  lib.rs  main.rs  version_check.rs
src/application/: actions.rs  mod.rs  services.rs  state.rs
src/application/use_cases/: apply_filter.rs  compare_snapshots.rs  correlate_events.rs  diagnose_pressure.rs  export.rs  ingest_events.rs  mod.rs
src/domain/: diff.rs  event.rs  filter.rs  mod.rs  narrative.rs  pressure.rs  snapshot.rs  taxonomy.rs
src/domain/correlation/: engine.rs  mod.rs  rule.rs
src/domain/correlation/rules/: config_service_reload.rs  disk_write_failure.rs  mod.rs  network_service_timeout.rs  oom_service_restart.rs  package_service_restart.rs  permission_denial.rs  service_cascade.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: custom_log.rs  flatpak.rs  journald.rs  kernel.rs  mod.rs  process.rs  security.rs  system_stats.rs  systemd.rs
src/infrastructure/adapters/package/: apt.rs  dnf.rs  mod.rs  pacman.rs  zypper.rs
src/infrastructure/adapters/pressure/: mod.rs  procfs.rs  psi.rs  ring_buffer.rs  sampler.rs  unit_mapper.rs
src/infrastructure/adapters/snapshot/: autostart.rs  config.rs  flatpak.rs  mod.rs  network.rs  packages.rs  security.rs  storage.rs  system_identity.rs  systemd_snapshot.rs
src/infrastructure/desktop/: detector.rs  mod.rs  notifications.rs  portal.rs  theme.rs
src/infrastructure/icons/: mod.rs  resolver.rs
src/infrastructure/storage/: bookmarks.rs  mod.rs  retention.rs  snapshot_store.rs
src/ui/: app.rs  mod.rs  style.rs  window.rs
src/ui/pages/: diagnostics_page.rs  health_page.rs  help_page.rs  mod.rs  performance_page.rs  security_page.rs  services_page.rs  settings_page.rs  snapshot_page.rs  timeline_page.rs
src/ui/widgets/: event_row.rs  filter_bar.rs  mod.rs  process_list.rs  severity_badge.rs  theme_popover.rs  timeline_view.rs
